--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/hardhat-upgrades": "^1.15.0",
+    "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "hardhat-contract-sizer": "^2.5.0",
     "hardhat-gas-reporter": "^1.0.8",
