--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "hardhat-upgrades-fcc",
+  "version": "1.0.0",
+  "description": "",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "ethers": "^5.5.4",
